# src/Makefile

SUBDIRS = TiledArray
include_HEADERS = tiled_array.h
nobase_include_HEADERS = TiledArray/annotated_array.h \
                  TiledArray/annotated_tile.h \
                  TiledArray/annotation.h \
                  TiledArray/array_dim.h \
                  TiledArray/array_math.h \
                  TiledArray/array_ref.h \
                  TiledArray/array_slice.h \
                  TiledArray/array_util.h \
                  TiledArray/array.h \
                  TiledArray/coordinate_system.h \
                  TiledArray/coordinates.h \
                  TiledArray/dense_array.h \
                  TiledArray/distributed_array.h \
                  TiledArray/error.h \
                  TiledArray/iterator.h \
                  TiledArray/key.h \
                  TiledArray/madness_runtime.h \
                  TiledArray/packed_tile.h \
                  TiledArray/permutation.h \
                  TiledArray/predicate.h \
                  TiledArray/range.h \
                  TiledArray/shape.h \
                  TiledArray/tile_math.h \
                  TiledArray/tile_slice.h \
                  TiledArray/tile.h \
                  TiledArray/tiled_range.h \
                  TiledArray/tiled_range1.h \
                  TiledArray/type_traits.h \
                  TiledArray/utility.h \
                  TiledArray/variable_list.h